plugins {
  id 'java-library'
}

group 'com.google.cloud.tools'

sourceCompatibility = JavaVersion.VERSION_11
targetCompatibility = JavaVersion.VERSION_11
compileJava.options.encoding = 'UTF-8'

repositories {
  flatDir {
    dirs 'mockito-libs' // to load mockito 2.23.17 built locally
  }
  mavenCentral()
}

dependencies {
  // Make sure these are consistent with jib-maven-plugin.
  implementation 'com.google.http-client:google-http-client:1.27.0'
  implementation 'org.apache.commons:commons-compress:1.18'
  implementation 'com.google.guava:guava:23.5-jre'
  implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.8'
  implementation 'org.javassist:javassist:3.24.1-GA'

  testImplementation 'junit:junit:4.12'
  //testImplementation 'org.mockito:mockito-core:2.23.17'
  testImplementation 'org.mockito:mockito-core:2.23.4'
  testImplementation 'org.slf4j:slf4j-api:1.7.25'
}

ext.moduleName = 'com.google.cloud.tools.jib'

compileJava {
  doFirst {
    options.compilerArgs = ['--module-path', classpath.asPath]
    classpath = files() // Clear the classpath. (Using --module-path instead.)
  }
}

//javadoc {
//  doFirst {
//    options.addStringOption('-module-path', classpath.asPath)
//    classpath = files() // Clear the classpath. (Using --module-path instead.)
//  }
//}

compileTestJava {
  inputs.property("moduleName", moduleName)
  doFirst {
    options.compilerArgs = [
        '--module-path', classpath.asPath,
        '--add-modules', 'junit',
        '--patch-module', "$moduleName=" + files(sourceSets.test.java.srcDirs).asPath,
    ]
    classpath = files() // clear the classpath (Using --module-path instead.)
  }
}

test {
  inputs.property("moduleName", moduleName)
  doFirst {
    jvmArgs = [
        // '-Dnet.bytebuddy.experimental=true',
        '--module-path', classpath.asPath,
        '--add-modules', 'ALL-MODULE-PATH',
        '--add-reads', "$moduleName=junit",
        '--patch-module', "$moduleName=" + files(sourceSets.test.java.outputDir).asPath,

        // still messy, just trying to open and export everything
        '--add-opens', 'com.google.cloud.tools.jib/com.google.cloud.tools.jib.api=junit,org.mockito',
        '--add-opens', 'com.google.cloud.tools.jib/com.google.cloud.tools.jib.frontend=junit,org.mockito',
        '--add-opens', 'com.google.cloud.tools.jib/com.google.cloud.tools.jib.blob=junit,org.mockito',
        '--add-opens', 'com.google.cloud.tools.jib/com.google.cloud.tools.jib.filesystem=junit,org.mockito',
        '--add-opens', 'com.google.cloud.tools.jib/com.google.cloud.tools.jib.configuration=junit,org.mockito',
        '--add-opens', 'com.google.cloud.tools.jib/com.google.cloud.tools.jib.configuration.credentials=junit,org.mockito',
        '--add-opens', 'com.google.cloud.tools.jib/com.google.cloud.tools.jib.http=junit,org.mockito',
        '--add-opens', 'com.google.cloud.tools.jib/com.google.cloud.tools.jib.hash=junit,org.mockito',
        '--add-opens', 'com.google.cloud.tools.jib/com.google.cloud.tools.jib.cache=junit,org.mockito',
        '--add-opens', 'com.google.cloud.tools.jib/com.google.cloud.tools.jib.image=junit,org.mockito',
        '--add-opens', 'com.google.cloud.tools.jib/com.google.cloud.tools.jib.image.json=junit,org.mockito',
        '--add-opens', 'com.google.cloud.tools.jib/com.google.cloud.tools.jib.tar=junit,org.mockito',
        '--add-opens', 'com.google.cloud.tools.jib/com.google.cloud.tools.jib.docker=junit,org.mockito',
        '--add-opens', 'com.google.cloud.tools.jib/com.google.cloud.tools.jib.docker.json=junit,org.mockito',
        '--add-opens', 'com.google.cloud.tools.jib/com.google.cloud.tools.jib.registry=junit,org.mockito',
        '--add-opens', 'com.google.cloud.tools.jib/com.google.cloud.tools.jib.registry.credentials=junit,org.mockito',
        '--add-opens', 'com.google.cloud.tools.jib/com.google.cloud.tools.jib.global=junit,org.mockito',
        '--add-opens', 'com.google.cloud.tools.jib/com.google.cloud.tools.jib.json=junit,org.mockito',
        '--add-opens', 'com.google.cloud.tools.jib/com.google.cloud.tools.jib=junit,org.mockito',
        '--add-opens', 'com.google.cloud.tools.jib/com.google.cloud.tools.jib.builder=junit,org.mockito',
        '--add-opens', 'com.google.cloud.tools.jib/com.google.cloud.tools.jib.builder.steps=junit,org.mockito',
        '--add-opens', 'com.google.cloud.tools.jib/com.google.cloud.tools.jib.event=junit,org.mockito',
        '--add-opens', 'com.google.cloud.tools.jib/com.google.cloud.tools.jib.event.events=junit,org.mockito',
        '--add-opens', 'com.google.cloud.tools.jib/com.google.cloud.tools.jib.event.progress=junit,org.mockito',

        '--add-exports', 'com.google.cloud.tools.jib/com.google.cloud.tools.jib.api=junit,org.mockito',
        '--add-exports', 'com.google.cloud.tools.jib/com.google.cloud.tools.jib.frontend=junit,org.mockito',
        '--add-exports', 'com.google.cloud.tools.jib/com.google.cloud.tools.jib.blob=junit,org.mockito',
        '--add-exports', 'com.google.cloud.tools.jib/com.google.cloud.tools.jib.configuration=junit,org.mockito',
        '--add-exports', 'com.google.cloud.tools.jib/com.google.cloud.tools.jib.configuration.credentials=junit,org.mockito',
        '--add-exports', 'com.google.cloud.tools.jib/com.google.cloud.tools.jib.http=junit,org.mockito',
        '--add-exports', 'com.google.cloud.tools.jib/com.google.cloud.tools.jib.hash=junit,org.mockito',
        '--add-exports', 'com.google.cloud.tools.jib/com.google.cloud.tools.jib.cache=junit,org.mockito',
        '--add-exports', 'com.google.cloud.tools.jib/com.google.cloud.tools.jib.image=junit,org.mockito',
        '--add-exports', 'com.google.cloud.tools.jib/com.google.cloud.tools.jib.image.json=junit,org.mockito',
        '--add-exports', 'com.google.cloud.tools.jib/com.google.cloud.tools.jib.tar=junit,org.mockito',
        '--add-exports', 'com.google.cloud.tools.jib/com.google.cloud.tools.jib.docker=junit,org.mockito',
        '--add-exports', 'com.google.cloud.tools.jib/com.google.cloud.tools.jib.docker.json=junit,org.mockito',
        '--add-exports', 'com.google.cloud.tools.jib/com.google.cloud.tools.jib.registry=junit,org.mockito',
        '--add-exports', 'com.google.cloud.tools.jib/com.google.cloud.tools.jib.registry.credentials=junit,org.mockito',
        '--add-exports', 'com.google.cloud.tools.jib/com.google.cloud.tools.jib.global=junit,org.mockito',
        '--add-exports', 'com.google.cloud.tools.jib/com.google.cloud.tools.jib.json=junit,org.mockito',
        '--add-exports', 'com.google.cloud.tools.jib/com.google.cloud.tools.jib=junit,org.mockito',
        '--add-exports', 'com.google.cloud.tools.jib/com.google.cloud.tools.jib.builder=junit,org.mockito',
        '--add-exports', 'com.google.cloud.tools.jib/com.google.cloud.tools.jib.builder.steps=junit,org.mockito',
        '--add-exports', 'com.google.cloud.tools.jib/com.google.cloud.tools.jib.event=junit,org.mockito',
        '--add-exports', 'com.google.cloud.tools.jib/com.google.cloud.tools.jib.event.events=junit,org.mockito',
        '--add-exports', 'com.google.cloud.tools.jib/com.google.cloud.tools.jib.event.progress=junit,org.mockito',

        // for the com.fasterxml.jackson.databind module
        '--add-exports', 'com.google.cloud.tools.jib/com.google.cloud.tools.jib.registry.credentials.json=com.fasterxml.jackson.databind',
        '--add-exports', 'com.google.cloud.tools.jib/com.google.cloud.tools.jib.registry.json=com.fasterxml.jackson.databind',
        '--add-opens', 'com.google.cloud.tools.jib/com.google.cloud.tools.jib.cache=com.fasterxml.jackson.databind',
        '--add-opens', 'com.google.cloud.tools.jib/com.google.cloud.tools.jib.docker.json=com.fasterxml.jackson.databind',
        '--add-opens', 'com.google.cloud.tools.jib/com.google.cloud.tools.jib.image.json=com.fasterxml.jackson.databind',
        '--add-opens', 'com.google.cloud.tools.jib/com.google.cloud.tools.jib.json=com.fasterxml.jackson.databind',
        '--add-opens', 'com.google.cloud.tools.jib/com.google.cloud.tools.jib.registry.credentials.json=com.fasterxml.jackson.databind',
        '--add-opens', 'com.google.cloud.tools.jib/com.google.cloud.tools.jib.registry.json=com.fasterxml.jackson.databind',
    ]

    // With the new resource encapsulation rules with Java modules,
    // (https://docs.oracle.com/en/java/javase/11/docs/api/java.base/java/lang/Module.html#getResourceAsStream(java.lang.String)
    // many "ClassLoader.getResource()" calls in our test code running in an unnamed module (Gradle
    // test runner) will not be able to access resources. Below sets the classpath to the test
    // resource output directory as a simple workaround. (If we did not have "getResource()", we
    // would clear the classpath instead.) Should reconsider this when the Gradle test runner is
    // fully modularized or we find a better solution.
    classpath = files(sourceSets.test.output.resourcesDir)
  }
}

test {
  testLogging {
    showStandardStreams = true
    exceptionFormat = 'full'
  }
}

tasks.withType(Test) {
  reports.html.setDestination file("${reporting.baseDir}/${name}")
}
